@@ -1,0 +1,2 @@
+# Added the testing repository of the lod2stack
+deb http://stack.lod2.eu/deb/distributions/ lod2virt7 main
